--- a/Sample1/MvcMultiLanguage/App_GlobalResources/Global.en-US.resx
+++ b/Sample1/MvcMultiLanguage/App_GlobalResources/Global.en-US.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HomeIndex" xml:space="preserve">
+    <value>Home</value>
+  </data>
   <data name="MensagemGlobal" xml:space="preserve">
     <value>Global message !</value>
+  </data>
+  <data name="NomeAplicacao" xml:space="preserve">
+    <value>MVC Multi-languages &lt;english&gt;</value>
   </data>
 </root>
