--- a/Sample1/MvcMultiLanguage/Views/Home/App_LocalResources/Index.cshtml.en-US.resx
+++ b/Sample1/MvcMultiLanguage/Views/Home/App_LocalResources/Index.cshtml.en-US.resx
@@ -120,4 +120,7 @@
   <data name="MensagemLocal" xml:space="preserve">
     <value>Local message !</value>
   </data>
+  <data name="Titulo" xml:space="preserve">
+    <value>Home</value>
+  </data>
 </root>
