--- a/Sample1/MvcMultiLanguage/App_GlobalResources/Global.en-US.resx
+++ b/Sample1/MvcMultiLanguage/App_GlobalResources/Global.en-US.resx
@@ -124,6 +124,6 @@
     <value>Global message !</value>
   </data>
   <data name="NomeAplicacao" xml:space="preserve">
-    <value>MVC Multi-languages &lt;english&gt;</value>
+    <value>MVC3 Multi-languages Sample 1 &lt;english&gt;</value>
   </data>
 </root>
