--- a/Sample1/MvcMultiLanguage/App_GlobalResources/Global.resx
+++ b/Sample1/MvcMultiLanguage/App_GlobalResources/Global.resx
@@ -124,6 +124,6 @@
     <value>Mensagem global padrão !</value>
   </data>
   <data name="NomeAplicacao" xml:space="preserve">
-    <value>MVC Multi-linguagens &lt;português&gt;</value>
+    <value>MVC3 Multi-linguagens Exemplo 1 &lt;português&gt;</value>
   </data>
 </root>
